// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/upload/demo/Avatar.js correctly test 1`] = `
<span
  class="avatar-uploader"
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-picture-card"
    style="display:"
  />
</span>
`;

exports[`renders ./components/upload/demo/Basic.js correctly test 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
    style="display:"
  />
  <div
    class="jc-upload-list jc-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/DefaultFileList.js correctly test 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
    style="display:"
  />
  <div
    class="jc-upload-list jc-upload-list-text"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <a
            class="jc-upload-list-item-name"
            href="http://www.baidu.com/xxx.png"
            rel="noopener noreferrer"
            target="_blank"
            title="xxx.png"
          >
            xxx.png
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <a
            class="jc-upload-list-item-name"
            href="http://www.baidu.com/yyy.png"
            rel="noopener noreferrer"
            target="_blank"
            title="yyy.png"
          >
            yyy.png
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-error"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <a
            class="jc-upload-list-item-name"
            href="http://www.baidu.com/zzz.png"
            rel="noopener noreferrer"
            target="_blank"
            title="zzz.png"
          >
            zzz.png
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/Drag.js correctly test 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-drag"
  />
  <div
    class="jc-upload-list jc-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/FileList.js correctly test 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
    style="display:"
  />
  <div
    class="jc-upload-list jc-upload-list-text"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <a
            class="jc-upload-list-item-name"
            href="http://www.baidu.com/xxx.png"
            rel="noopener noreferrer"
            target="_blank"
            title="xxx.png"
          >
            xxx.png
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/Picture-card.js correctly test 1`] = `
<div
  class="clearfix"
>
  <span
    class=""
  >
    <div
      class="jc-upload-list jc-upload-list-picture-card"
    >
      <div
        class="jc-upload-list-item jc-upload-list-item-done"
      >
        <div
          class="jc-upload-list-item-info"
        >
          <span>
            <a
              class="jc-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="jc-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <span
          class="jc-upload-list-item-actions"
        >
          <a
            href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
            rel="noopener noreferrer"
            target="_blank"
            title="Preview file"
          >
            <i
              class="jcicon jcicon-eye-o "
            />
          </a>
          <i
            class="jcicon jcicon-delete "
            title="Remove file"
          />
        </span>
      </div>
    </div>
    <div
      class="jc-upload jc-upload-select jc-upload-select-picture-card"
      style="display:"
    />
  </span>
</div>
`;

exports[`renders ./components/upload/demo/Picture-style.js correctly test 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="jc-upload jc-upload-select jc-upload-select-picture"
      style="display:"
    />
    <div
      class="jc-upload-list jc-upload-list-picture"
    >
      <div
        class="jc-upload-list-item jc-upload-list-item-done"
      >
        <div
          class="jc-upload-list-item-info"
        >
          <span>
            <a
              class="jc-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="jc-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <i
          class="jcicon jcicon-cross "
          title="Remove file"
        />
      </div>
      <div
        class="jc-upload-list-item jc-upload-list-item-done"
      >
        <div
          class="jc-upload-list-item-info"
        >
          <span>
            <a
              class="jc-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="yyy.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="jc-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="yyy.png"
            >
              yyy.png
            </a>
          </span>
        </div>
        <i
          class="jcicon jcicon-cross "
          title="Remove file"
        />
      </div>
    </div>
  </span>
  <br />
  <br />
  <span
    class="upload-list-inline"
  >
    <div
      class="jc-upload jc-upload-select jc-upload-select-picture"
      style="display:"
    />
    <div
      class="jc-upload-list jc-upload-list-picture"
    >
      <div
        class="jc-upload-list-item jc-upload-list-item-done"
      >
        <div
          class="jc-upload-list-item-info"
        >
          <span>
            <a
              class="jc-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="jc-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <i
          class="jcicon jcicon-cross "
          title="Remove file"
        />
      </div>
      <div
        class="jc-upload-list-item jc-upload-list-item-done"
      >
        <div
          class="jc-upload-list-item-info"
        >
          <span>
            <a
              class="jc-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="yyy.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="jc-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="yyy.png"
            >
              yyy.png
            </a>
          </span>
        </div>
        <i
          class="jcicon jcicon-cross "
          title="Remove file"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`renders ./components/upload/demo/Upload-manually.js correctly test 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="jc-upload jc-upload-select jc-upload-select-text"
      style="display:"
    />
    <div
      class="jc-upload-list jc-upload-list-text"
    />
  </span>
  <button
    class="jc-btn upload-demo-start jc-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Start Upload
    </span>
  </button>
</div>
`;
